hello-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
spec:
  containers:
    - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
      name: hello
      resources:
        requests:
          cpu: "500m"
          memory: "128Mi"
      ports:
      - containerPort: 8080
        name: http
        protocol: TCP
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 5   # wait before first check
        periodSeconds: 10        # check every 10s
        failureThreshold: 3      # restart if fails 3 times in a row
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 2
        periodSeconds: 5
        failureThreshold: 3
